exports[`Accounts component should render correctly 1`] = `
<div
  className="section">
  <div
    className="row">
    <div
      className="col-md-6">
      <header>
        Debit and credit accounts
      </header>
    </div>
    <div
      className="col-md-6">
      <span
        className="pull-right">
        <small>
          <b>
            * Required Information
          </b>
        </small>
      </span>
    </div>
  </div>
  <div
    className="row">
    <div
      className="col-md-12" />
  </div>
</div>
`;

exports[`AdditionalDetails component should render correctly 1`] = `
<div
  className="section">
  <div
    className="row">
    <div
      className="col-md-6">
      <header>
        Additional details
      </header>
    </div>
    <div
      className="col-md-6">
      <span
        className="pull-right">
        <small>
          <b>
            * Required Information
          </b>
        </small>
      </span>
    </div>
  </div>
  <div
    className="row">
    <div
      className="col-md-12" />
  </div>
</div>
`;

exports[`BeneficiaryAddress component should render correctly 1`] = `
<div
  className="row">
  <div
    className="col-md-4">
    <label
      className="control-label"
      htmlFor={undefined}>
      *Beneficiary Address
    </label>
  </div>
  <div
    className="col-md-8" />
</div>
`;

exports[`BeneficiaryDetailsSection component should render correctly 1`] = `
<div
  className="row">
  <div
    className="col-md-4 col-sm-4">
    <div
      className="payto">
      <p>
        Pay to
      </p>
    </div>
  </div>
  <div
    className="col-md-8 col-sm-8" />
  <div
    className="col-md-12">
    <div
      className="beneficiary-details-section" />
  </div>
</div>
`;

exports[`DebitAccountDetailsSection component should render correctly 1`] = `
<div
  className="row">
  <div
    className="col-md-12" />
</div>
`;

exports[`TransferDetails component should render correctly 1`] = `
<div
  className="section">
  <div
    className="row">
    <div
      className="col-md-6">
      <header>
        Transfer details
      </header>
    </div>
    <div
      className="col-md-6">
      <span
        className="pull-right">
        <small>
          <b>
            * Required Information
          </b>
        </small>
      </span>
    </div>
  </div>
  <div
    className="row">
    <div
      className="col-md-12" />
  </div>
</div>
`;

exports[`ValueDate component should render correctly 1`] = `
<div
  className="row">
  <div
    className="col-md-4 col-sm-4">
    <label
      className="control-label"
      htmlFor={undefined}>
      Send this transfer
    </label>
  </div>
  <div
    className="col-md-8 col-sm-8">
    <div
      className="col-md-12 form-group" />
  </div>
  <div
    className="col-md-12 col-sm-12">
    <div
      className="well">
      <p>
        <i
          className="glyphicon glyphicon-info-sign" />
         
        <b>
          Your transfer will be processed on the first possible value date
        </b>
      </p>
    </div>
  </div>
</div>
`;
